tests/neg/namespace-import-branch/main.jo
namespace app

import test    // error

def main =
  test.lib.double 10 p
